# Pet-Adoption-Matching-Agent

./: .gitignore  .pre-commit-config.yaml  README.md  dcard_article_urls.json  pyproject.toml  requirements-tests.txt  requirements.txt
.github/workflows/: pre-commit.yml  smokeshow.yml  tests.yml
.streamlit/: secrets.toml.example
_locales/en/: messages.json
_locales/zh-CN/: messages.json
_locales/zh-TW/: messages.json
src/: streamlit_app.py
src/pages/: gemini_with_image_analysis.txt  home.py  pets_autogen.py
src/static/: BudgetAdvisor_Agent_Prompt.txt  CareGuide_Agent_Prompt.txt  Matchmaker_Agent_Prompt.txt  animal_info.json  run_vectorize.py  system_prompt.txt
src/utils/: helpers.py
src/utils/bots/: __init__.py  ctx_mgr.py  helpers.py
src/utils/function_call/: __init__.py  pets.py  wordcloud.py
src/utils/i18n/: __init__.py  internationalization.py
tests/: test_chat.py  test_langs.py
tests/utils/: i18n.py
